data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3677.wast
;; 6. **Test Indirect Function Call with Incorrect Type**:    - Utilize a `call_indirect` with a mismatched function signature in the table.    - **Constraint**: Type validation of the target function in `call_indirect`.    - **Improper Call Handling**: Could lead to calling inappropriate functions.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (param i32) (result i32)
      (call_indirect (type 1) (i32.const 0) (i32.const 42))
    )
  )
  "type mismatch"
)